--- a/app/templates/top_products.html
+++ b/app/templates/top_products.html
@@ -9,7 +9,7 @@
     <button type="submit">Show Top Products</button>
 </form>
 
-<table id="products-table" class="product-table">
+<table id="products-table" class="table table-hover table-bordered container">
     <tr>
         <th>Product Name</th>
         <th>Price</th>
