--- a/app/templates/seller-orders.html
+++ b/app/templates/seller-orders.html
@@ -18,7 +18,7 @@
           <th scope="col">Order #</th>
           <th scope="col">Date Placed</th>
           <th scope="col">Buyer</th>
-          <th scope="col">Items</th>
+          <th scope="col">Items Supplied</th>
           <th scope="col">Order Total</th>
           <th scope="col">Overall Order Status</th>
           <th scope="col">Details</th>
@@ -70,6 +70,7 @@
       </li>
     </ul>
   </nav>
+  
   {% endif %}
   {% else %}
   <p class="mt-3">You have not received any orders yet.</p>
