--- a/app/templates/top_products.html
+++ b/app/templates/top_products.html
@@ -14,6 +14,7 @@
         <th>Product Name</th>
         <th>Price</th>
         <th>Available</th>
+        <th>Add to Cart</th>
     </tr>
 </table>
 
@@ -38,6 +39,13 @@ async function fetchTopProducts(k=5) {
             <td>${product.name}</td>
             <td>${product.price}</td>
             <td>${product.available ? 'Yes' : 'No'}</td>
+            <td>
+      ${product.available ? `
+        <form action="/cart/add/${product.id}" method="POST">
+          <input type="submit" value="Add to Cart" class="btn btn-sm btn-outline-primary"/>
+        </form>
+      ` : ''}
+    </td>
         `;
         table.appendChild(row);
     });
