--- a/app/templates/add_product.html
+++ b/app/templates/add_product.html
@@ -5,6 +5,7 @@
   <h2>Add a New Product</h2>
 
   <form method="POST">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <div class="mb-3">
       <label for="name" class="form-label">Product Name</label>
       <input type="text" class="form-control" id="name" name="name" required>
