--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -248,6 +248,7 @@
             </a>
             <div class="dropdown-divider"></div>
             <form action="{{ url_for('account.logout') }}" method="post" style="margin: 0;">
+              <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
               <button class="btn-logout" type="submit">
                 <i class="fas fa-sign-out-alt"></i>Log out
               </button>
