--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -50,6 +50,7 @@
         <td>
           {% if g.user %}
           <form action="{{ url_for('wishlist.wishlist_add', product_id=product.id) }}" method="POST">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <input type="submit" value="Add to Wishlist" class="btn btn-sm btn-outline-success"/>
           </form>
           {% else %}
@@ -83,24 +84,32 @@
 <br><br>
 {% if g.user %}
 <h2>Your recent purchases:</h2>
-<table class='table table-hover table-bordered container'>
+{% if purchase_history %}
+<table class="table table-hover table-bordered container">
   <thead class="thead-dark">
     <tr>
-      <th scope="col">Purchase ID</th>
-      <th scope="col">Product Name</th>
-      <th scope="col">Price</th>
+      <th scope="col">Order #</th>
+      <th scope="col">Item</th>
+      <th scope="col">Quantity</th>
+      <th scope="col">Line total</th>
+      <th scope="col">Purchased on</th>
     </tr>
   </thead>
   <tbody>
     {% for purchase in purchase_history %}
       <tr>
-        <th scope="row">{{ purchase.id }}</th>
-        <td>{{ purchase.pid }}</td>
-        <td>{{ purchase.time_purchased }}</td>
+        <th scope="row">{{ purchase.order_id }}</th>
+        <td>{{ purchase.product_name or ('Product #' ~ purchase.product_id) }}</td>
+        <td>{{ purchase.quantity }}</td>
+        <td>{{ format_money(purchase.line_total_cents) }}</td>
+        <td>{{ purchase.created_at.strftime('%b %d, %Y') if purchase.created_at else '' }}</td>
       </tr>
     {% endfor %}
   </tbody>
 </table>
+{% else %}
+<p class="text-muted">We have not found any orders yet. Start shopping to see them here.</p>
+{% endif %}
 {% else %}
 <p><a href="{{ url_for('account.login') }}">Log in</a> to see your purchase history!</p>
 {% endif %}
